# bittle_ros

./: README.md  distance_to_camera.csv  generate_graphs.ipynb  rosbag_to_csv.py  x_y_positions.csv
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/share/apriltag_pose_estimation/cmake/: apriltag_pose_estimationConfig.cmake
src/: how_to_run_this.txt
src/apriltag_follower/: CMakeLists.txt  package.xml
src/apriltag_follower/launch/: apriltag_follower.launch
src/apriltag_follower/scripts/: ApriltagFollower.py
src/apriltag_follower/scripts/InverseKinematics/: robot_IK.py
src/apriltag_follower/scripts/RobotController/: GaitController.py  PIDController.py  RobotController.py  StateCommand.py  TrotGaitController.py
src/apriltag_pose_estimation/: CMakeLists.txt  package.xml
src/apriltag_pose_estimation/launch/: apriltag_detector.launch
src/apriltag_pose_estimation/scripts/: ApriltagDetector.py
src/bittle_description/: CMakeLists.txt  package.xml
src/bittle_description/launch/: bittle_rviz.launch  bittle_rviz.rviz
src/bittle_description/urdf/: bittle.urdf
src/bittle_gazebo/: CMakeLists.txt  package.xml
src/bittle_gazebo/config/: controllers.yaml
src/bittle_gazebo/launch/: simulation.launch  spawn_robot.launch
src/bittle_gazebo/launch/world/: normal.world  office.world  wall_apriltag.world
